# letterboxed_mp

./: .gitattributes  .gitignore  LICENSE  README.md  bootstrap.sh  build_swift_project.sh  build_swift_xcf.sh  build_wasm_project.sh  gen_desktop_project.sh  test_puzzles.txt
.github/: pull_request_template.md
kotlin_project/: .gitignore  README.md  settings.gradle.kts
kotlin_project/app/: build.gradle.kts
kotlin_project/app/src/androidTest/java/com/tinybitsinteractive/lbsolver/: ExampleInstrumentedTest.kt
kotlin_project/app/src/main/: AndroidManifest.xml
kotlin_project/app/src/main/kotlin/com/tinybitsinteractive/lbsolver/: MainActivity.kt  SolverUI.kt
kotlin_project/app/src/main/kotlin/com/tinybitsinteractive/lbsolver/ui/theme/: Color.kt  Theme.kt  Type.kt
kotlin_project/app/src/main/res/values/: strings.xml  themes.xml
kotlin_project/app/src/test/java/com/tinybitsinteractive/lbsolver/: ExampleUnitTest.kt
kotlin_project/gradle/: libs.versions.toml
kotlin_project/gradle/wrapper/: gradle-wrapper.properties
kotlin_project/lbsolverlib/: build.gradle.kts
kotlin_project/lbsolverlib/src/androidTest/kotlin/com/tinybitsinteractive/lbsolverlib/: ExampleInstrumentedTest.kt
kotlin_project/lbsolverlib/src/main/kotlin/com/tinybitsinteractive/lbsolverlib/: Logger.kt  Solver.kt  SolverCore.kt
kotlin_project/lbsolverlib/src/main/kotlin/com/tinybitsinteractive/lbsolverlib/kotlincore/: KotlinCore.kt  PuzzleDict.kt
kotlin_project/lbsolverlib/src/main/kotlin/com/tinybitsinteractive/lbsolverlib/nativecore/: NativeCore.kt
kotlin_project/lbsolverlib/src/test/kotlin/com/tinybitsinteractive/lbsolverlib/: PuzzleDictTest.kt  SolverTest.kt
src/: CMakeLists.txt  vcpkg.json
src/api/: CMakeLists.txt  api_def.json  api_util.h  bng_api.json  bng_engine_cbindings.cpp  bng_engine_cbindings.h  engine_api.h  engine_types.h  render_api.h  render_types.h
src/cmake/: code_gen.cmake  commands.cmake  host_init.cmake  options.cmake  platform_config.cmake  platform_init.cmake  target_common.cmake  target_exe.cmake  target_lib.cmake  target_reset.cmake  test_macros.cmake  third_party.cmake  third_party_init.cmake  third_party_macros.cmake
src/core/: core.h
src/core/3p/: glm.h
src/core/tests/: test_move.cpp
src/engine/: CMakeLists.txt  engine.cpp  engine.h  engine_api.cpp  word_db.cpp  word_db.h  word_db_std.cpp  word_db_std.h
src/engine/systems/: system.cpp  system.h
src/engine/tests/: test_basic.cpp  test_ops.cpp  test_std_ops.cpp  test_system.cpp  test_word.cpp
src/geometry/: geometry.h
src/geometry/tests/: test_basic.cpp
src/platform/: CMakeLists.txt
src/platform/desktop/: CMakeLists.txt  desktop.cpp  desktop.h  main.cpp  words_alpha.txt
src/platform/desktop/linux/: CMakeLists.txt
src/platform/desktop/macos/: CMakeLists.txt
src/platform/desktop/windows/: main.cpp
src/platform/mobile/: CMakeLists.txt  mobile.cpp  mobile.h
src/platform/mobile/android/: CMakeLists.txt  jni.cpp  jni_bindings.cpp  jni_util.h
src/platform/mobile/ios/: CMakeLists.txt  bng.h  swift_bindings.cpp
src/platform/wasm/: CMakeLists.txt  wasm.cpp  wasm.h  wasm_bindingcs.cpp
src/test_harness/: test_harness.h
src/tool_scripts/: gen_api_sources.py  requirements.txt
src/tool_scripts/code_gen/: api_def.py  c_generator.py  cpp_generator.py  generator.py  kotlin_generator.py  swift_generator.py  wasm_generator.py
src/tool_scripts/tests/: api0_def.json  api1_def.json  test_api_def.py  test_cpp_generator.py  test_gen_api_sources.py  test_kotlin_generator.py  test_swift_generatorp.py  test_wasm_generator.py
src/tool_scripts/tests/fixtures/: api0_def.json  api1_def.json
swift_project/: .gitignore
swift_project/app/: Package.swift
swift_project/lbsolver/: ContentView.swift  Item.swift  lbsolverApp.swift
swift_project/lbsolver.xcodeproj/: project.pbxproj
swift_project/lbsolver.xcodeproj/xcshareddata/xcschemes/: lbsolver.xcscheme
swift_project/lbsolverTests/: lbsolverTests.swift
swift_project/lbsolverUITests/: lbsolverUITests.swift  lbsolverUITestsLaunchTests.swift
swift_project/lbsolverlib/: Package.swift
swift_project/lbsolverlib/Sources/: Solver.swift
swift_project/lbsolverlib/Sources/bng_bridge/: bng_bridge.m
swift_project/lbsolverlib/Sources/bng_bridge/include/: bng_bridge.h
swift_project/lbsolverlib/Sources/lbsolverlib/: NativeCore.swift  Solver.swift  SolverCore.swift  SwiftCore.swift
util_scripts/: git_pre_commit_hook.sh
wasm_project/: .gitignore  index.html  run_server.sh  solver.js  solver_ui.js
wasm_project/modules/: common.js  js_core.js  solver.js  solver_ui.js  solver_worker.js  wasm_core.js
wasm_project/solver_cores/: js_core.js  wasm_core.js
